--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,16 @@ button:hover {
 	background: #184c62;
 }
 
+#flashMessage {
+    color: white;
+    background-color: #64ce83;
+    padding: 15px;
+    border-radius: 5px;
+    display: block;
+    width: calc(100% - 100px);
+    margin-bottom: 40px;
+}
+
 /* =================================
   Page Styles
 ==================================== */
