--- a/css/style.css
+++ b/css/style.css
@@ -113,13 +113,13 @@ button:hover {
 	background: #184c62;
 }
 
-#flashMessage {
+.flashMessage {
     color: white;
-    background-color: #64ce83;
+    background-color: #22627e;
     padding: 15px;
     border-radius: 5px;
     display: block;
-    width: calc(100% - 100px);
+    width: calc(100%);
     margin-bottom: 40px;
 }
 
